--- a/css_exercise/css.layout/css/6.final-layout.css
+++ b/css_exercise/css.layout/css/6.final-layout.css
@@ -8,9 +8,13 @@ input {
     margin: 0;
     padding: 0;
 }
+#container {
+    width: 1400px;
+    margin: 0 auto;
+}
 .header {
     width: 100%;
-    height: 100px;
+    height: 150px;
 }
     .header-layer1 {
         width: 25%;
@@ -32,12 +36,12 @@ input {
     }
 .nav {
     width: 100%;
-    height: 30px;
+    height: 40px;
     text-align: center;
 }
 .main {
     width: 100%;
-    height: 400px;
+    height: 500px;
 }
     .main-layer1 {
         width: 20%;
@@ -90,13 +94,17 @@ input {
                 width: 100%;
                 height: 25%;
                 text-align: center;
-                font-size: 12px;
+                font-size: 15px;
+            }
+            .login-footer a {
+                padding: 0 20px;
             }
         .empty {
             width: 100%;
             height: 80%;;
         }
 .footer {
-    width: 100;
-    height: 100px;
+    width: 100%;
+    height: 150px;
+    text-align: center;
 }
