--- a/css_exercise/css.layout/css/6.final-layout.css
+++ b/css_exercise/css.layout/css/6.final-layout.css
@@ -94,10 +94,12 @@ input {
                 width: 100%;
                 height: 25%;
                 text-align: center;
-                font-size: 15px;
+                font-size: 16px;
             }
-            .login-footer a {
-                padding: 0 20px;
+            .login-footer a .login-footer a:visited {
+                padding: 20px;
+                text-decoration: none;
+                color: red;
             }
         .empty {
             width: 100%;
